Adding my username

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/docusaurus-plugin-link-react-fix.git"
+    "url": "https://github.com/scalvert/docusaurus-plugin-link-react-fix.git"
   },
   "license": "MIT",
-  "author": "Your Name",
+  "author": "Steve Calvert <steve.calvert@gmail.com>",
   "main": "index.js",
   "scripts": {
     "prettier": "prettier --write ."
